# deep-research-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
deep_agent/: __init__.py  checkpoint.py  cli.py  config.py  graph.py  observability.py  preflight.py  state.py
deep_agent/agents/: __init__.py  base.py  collector.py  fact_checker.py  planner.py  reflection.py  scraper.py  search.py  writer.py
deep_agent/llm/: __init__.py  factory.py
deep_agent/models/: __init__.py  schemas.py
deep_agent/search/: __init__.py  base.py  factory.py  serper.py  tavily.py
deep_agent/tasks/: __init__.py  celery_app.py  scraping.py  search.py
deep_agent/utils/: __init__.py  citations.py  context.py  logging.py  politeness.py  retry.py
