[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-agent"
version = "0.1.0"
description = "A modular, multi-agent deep-research CLI built on LangGraph, Celery and Tenacity."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "tavily-python>=0.5.0",
    "celery[redis]>=5.3.0",
    "tenacity>=8.2.0",
    "langfuse>=2.53.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
deep-agent = "deep_agent.cli:app"

[tool.setuptools.packages.find]
include = ["deep_agent*"]
